--- a/templates/usermanage.html
+++ b/templates/usermanage.html
@@ -22,7 +22,7 @@
                             <input id="descriptioninput" class="form-control" type="input">
                     </div>
                     <div class="form-group">
-                            <label for="timezoneinput">Timezone <p class="text-muted" id="curtimezone"></p></label><br>
+                            <label for="timezoneinput">Timezone <p class="text-muted" id="curtimezone"></p></label>
                                 <select id="timezone" name="timezone">
                                   {% for tz in timezones %}
 
