add back button

--- a/templates/usermanage.html
+++ b/templates/usermanage.html
@@ -4,6 +4,7 @@
 <div class="container">
     <div class="row">
         <div class="col">
+          <a href="/">Back to the Public Wall <<</a>
             <h1>User Management Console</h1>
             To get started, enter a user's id:
             <form id="userlookup">
