add back button
user friendliness

--- a/templates/timezone_set.html
+++ b/templates/timezone_set.html
@@ -6,6 +6,7 @@
 {% if error == True %}
 <p class='text-color:red;'>Invalid Timezone!</p>
 {% endif %}
+<a href="/profile/">Back <<</a>
 <p>Start typing to select your timezone. </p>
 <p>Your current timezone is: {{ currenttz }}</p>
 
