--- a/templates/main/login.html
+++ b/templates/main/login.html
@@ -24,7 +24,7 @@
 
           <div class="form-group">
            <button class="btn btn-primary" type="submit">Login</button>
-           <p class="text-muted">Signing in with Username and Password is only used for special accounts. If you are new here, click <a href="/new-user/">here</a>. However, you will only be able to Sign In with Google. </p>
+           <p class="text-muted">Are you new here? <a href="/new-user/">Register an account</a></p>
           </div>
       </form>
    </div>
