various fixes and changes

--- a/templates/credits.html
+++ b/templates/credits.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %} {% block content %}
+<div class="container"><div class="row"><div class="col">
 <a href="/">Back to the Public Wall <<</a><br>
 <b>Credits:</b>
 <i>Without these people/libraries, this project wouldn't have been possible. </i>
@@ -12,4 +13,5 @@
     <li>Popper, required by Bootstrap. </li>
     <li>And last but not least, Font awesome. They have an awesome icon library. </li>
 </ul>
+</div></div></div>
 {% endblock content %}
