--- a/templates/main/profile.html
+++ b/templates/main/profile.html
@@ -8,7 +8,7 @@
     <!-- csrf protection -->
     {% csrf_token %}
     <meta charset="utf-8">
-    <title>Bootstrap, from Twitter</title>
+    <title>Profile Settings</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -44,7 +44,7 @@
           <a class="brand" href="#">Profile Settings</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="/">Back to the Public Wall</a></li>
+              <li class=""><a href="/">Back to the Public Wall</a></li>
             </ul>
           </div>
         </div>
