--- a/static/publicwall/index.css
+++ b/static/publicwall/index.css
@@ -11,11 +11,16 @@
     text-decoration:underline!important;
   }
 .commentbox{
-  background-color: lightgrey;
-  padding-left: 43px;
-  padding-right: 43px;
+  /* background-color: lightgrey; */
+  /* padding-left: 43px;
+  padding-right: 43px; */
 }
 
 .grey {
-  color: #797979;
+  /* color: #797979; */
+}
+
+.postUnder {
+  padding-left: 8%;
+  padding-right: 8%;
 }
