--- a/templates/acc/login.html
+++ b/templates/acc/login.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %} {% block title %}Login{% endblock title %} {% block content %} {% csrf_token %}
-
+<!--not gonna create a seperate 
+    stylesheet                 -->
 <style type="text/css">
     .login-form {
         width: 25%;
@@ -12,6 +13,7 @@
         padding: 30px;
     }
 </style>
+<!--
 <div class="login-form">
     <form id="login-form">
         <h2 class="text-center">Log in</h2>
@@ -25,9 +27,32 @@
             <button type="submit" class="btn btn-primary btn-block"><b>Log in</b></button>
         </div>
         <div class="clearfix">
-            <p class="text-center"><a href="#">Create an Account</a></p>
+            <p class="text-center"><i>Are you new? </i><a href="#">Create an Account</a></p>
         </div>
     </form>
+</div>
+-->
+<div class="card" style="width:25%; margin:50px auto;">
+    <!-- <div class="card-header">
+        <h2 style=""><i class="fas fa-sign-in-alt"></i> Login</h2>
+    </div> -->
+    <div class="card-body">
+        <form id="login-form">
+            <h2>login</h2>
+            <div class="form-group">
+                <input type="text" id="username" class="form-control" placeholder="Username">
+            </div>
+            <div class="form-group">
+                <input type="password" id="password" class="form-control" placeholder="Password">
+            </div>
+            <div class="form-group">
+                <button type="submit" class="btn btn-primary btn-block"><b>Log in</b></button>
+            </div>
+            <div class="clearfix">
+                <p class="text-center"><i>Are you new? </i><a href="#">Create an Account</a></p>
+            </div>
+        </form>
+    </div>
 </div>
 <script src="/static/acc/login.js"></script>
 
