--- a/templates/publicwall/index.html
+++ b/templates/publicwall/index.html
@@ -5,6 +5,7 @@
 <script>
     window.PAGE_ID = "index"; 
 </script>
+<script src="/static/publicwall/elegen.js"></script>
 <script src="/static/publicwall/index.js"></script>
 <div class="container">
     <div class="row">
@@ -12,6 +13,9 @@
             <div id="content">
                 {# content goes here #}
 
+            </div>
+            <div id="posts">
+                
             </div>
         </div>
     </div>
