--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -35,10 +35,10 @@
         <div style="display: none!important /* override */; width: 100%; justify-content: space-between;" id="nav-logged-in" class="d-flex">
             <ul class="navbar-nav justify-content-start d-flex">
                 <li class="nav-item" id="home-nav-item">
-                    <a class="nav-link nav-link-bold" href="#">home</a>
+                    <a class="nav-link nav-link-bold" href="/">home</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link nav-link-bold" href="settings">profile settings</a>
+                <li class="nav-item" id="profile-nav-item">
+                    <a class="nav-link nav-link-bold" href="/user">profile settings</a>
                 </li>
             </ul>
             <ul class="navbar-nav justify-content-end d-flex">
