--- a/templates/publicwall/index.html
+++ b/templates/publicwall/index.html
@@ -5,8 +5,8 @@
 <script>
     window.PAGE_ID = "index"; 
 </script>
-<script src="/static/publicwall/elegen.js"></script>
-<script src="/static/publicwall/index.js"></script>
+<script src="/static/publicwall/elegen.closure.js"></script>
+<script src="/static/publicwall/index.closure.js"></script>
 <div class="container">
     <div class="row">
         <div class="col">
