--- a/templates/publicwall/index.html
+++ b/templates/publicwall/index.html
@@ -5,8 +5,19 @@
 <script>
     window.PAGE_ID = "index"; 
 </script>
+<!--
 <script src="/static/publicwall/elegen.closure.js"></script>
 <script src="/static/publicwall/index.closure.js"></script>
+-->
+<script src="/static/goog/base.js"></script>
+<script src="/static/publicwall/Checkbox.js"></script>
+<script src="/static/publicwall/Base.js"></script>
+<script src="/static/publicwall/Comment.js"></script>
+<script src="/static/publicwall/Post.js"></script>
+<script>
+    /* init */
+    com.info.Base.init();
+</script>
 <div class="container">
     <div class="row">
         <div class="col">
