blah blah blah blah blah

--- a/templates/publicwall/index.html
+++ b/templates/publicwall/index.html
@@ -10,6 +10,7 @@
 <script src="/static/publicwall/index.closure.js"></script>
 -->
 <script src="/static/goog/base.js"></script>
+<script src="/static/publicwall/CommentHandler.js"></script>
 <script src="/static/publicwall/Checkbox.js"></script>
 <script src="/static/publicwall/Base.js"></script>
 <script src="/static/publicwall/Comment.js"></script>
