--- a/templates/publicwall/index.html
+++ b/templates/publicwall/index.html
@@ -9,12 +9,13 @@
 <script src="/static/publicwall/elegen.closure.js"></script>
 <script src="/static/publicwall/index.closure.js"></script>
 -->
-<script src="/static/goog/base.js"></script>
-<script src="/static/publicwall/CommentHandler.js"></script>
-<script src="/static/publicwall/Checkbox.js"></script>
-<script src="/static/publicwall/Base.js"></script>
-<script src="/static/publicwall/Comment.js"></script>
-<script src="/static/publicwall/Post.js"></script>
+<script src="https://public-wall-aab93.firebaseapp.com/base.js"></script>
+<script src="/static/publicwall/index/CommentHandler.js"></script>
+<script src="/static/publicwall/index/Checkbox.js"></script>
+<script src="/static/publicwall/index/Base.js"></script>
+<script src="/static/publicwall/index/Comment.js"></script>
+<script src="/static/publicwall/index/Post.js"></script>
+<script src="/static/publicwall/index/Misc.js"></script>
 <script>
     /* init */
     com.info.Base.init();
