--- a/templates/base.html
+++ b/templates/base.html
@@ -67,6 +67,13 @@
         Please refresh the page, and if that doesn't work, please contact an administrator for more information. 
     </p> -->
     {% block content %}{% endblock content %}
+    <!-- instant click doesn't really work with my scripts. sigh. ... . .. . -->
+    <!--
+    <script src="/static/instantclick.js" data-no-instant></script>
+    <script>
+        // init instant click. 
+        InstantClick.init();
+    </script> -->
     
 
 </body>
