--- a/templates/base.html
+++ b/templates/base.html
@@ -8,15 +8,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <!-- commented out for bootstrap theme-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <script src="https://public-wall-aab93.firebaseapp.com/base.js"></script>
 
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.4.1/superhero/bootstrap.min.css"> -->
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> {# Pnotify css #}
-    <link rel="stylesheet" href="/static/pnotify/pnotify.css">
-    <link rel="stylesheet" href="/static/pnotify/material.css">
+    <link async href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> {# Pnotify css #}
+    <link rel="stylesheet" async href="/static/pnotify/pnotify.css">
+    <link rel="stylesheet" async href="/static/pnotify/material.css">
     <!-- error handling: -->
     <script>
         /* Error handling */
@@ -29,17 +25,14 @@
         };
 
     </script>
-    <script src="/static/moment/moment.js"></script>
-    <script src="/static/moment/timezone.js"></script>
-    <script src="/static/commons/commons.js"></script>
-    <script src="/static/pnotify/pnotify.js"></script>
+
     <style>
         /*body {
             Spacing for navbar 
             padding-top: 70px;
         }*/
     </style>
-    <script src="/static/commons/dom.js"></script>
+    
 </head>
 
 <body>
@@ -75,5 +68,14 @@
         InstantClick.init();
     </script> -->
     
+    <script defer src="/static/moment/moment.js"></script>
+    <script defer src="/static/moment/timezone.js"></script>
+    <script defer src="/static/commons/commons.js"></script>
+    <script defer src="/static/pnotify/pnotify.js"></script>
+    <script defer src="https://public-wall-aab93.firebaseapp.com/base.js"></script>
+    <script defer src="/static/commons/dom.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
 
 </body>
