Revert point for if redom conversion fails.

--- a/templates/publicwall/index.html
+++ b/templates/publicwall/index.html
@@ -9,7 +9,12 @@
 <script src="/static/publicwall/elegen.closure.js"></script>
 <script src="/static/publicwall/index.closure.js"></script>
 -->
-
+<script defer src="/static/publicwall/index/CommentHandler.js"></script>
+<script defer src="/static/publicwall/index/Checkbox.js"></script>
+<script defer src="/static/publicwall/index/Base.js"></script>
+<script defer src="/static/publicwall/index/Comment.js"></script>
+<script defer src="/static/publicwall/index/Post.js"></script>
+<script defer src="/static/publicwall/index/Misc.js"></script>
 <script>
     /* init */
     // run init script onReady
@@ -32,10 +37,5 @@
 </div>
 <!-- DOM -->
 
-<script src="/static/publicwall/index/CommentHandler.js"></script>
-<script src="/static/publicwall/index/Checkbox.js"></script>
-<script src="/static/publicwall/index/Base.js"></script>
-<script src="/static/publicwall/index/Comment.js"></script>
-<script src="/static/publicwall/index/Post.js"></script>
-<script src="/static/publicwall/index/Misc.js"></script>
+
 {% endblock content %}
