--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,10 @@
     <link async href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> {# Pnotify css #}
     <link rel="stylesheet" async href="/static/pnotify/pnotify.css">
     <link rel="stylesheet" async href="/static/pnotify/material.css">
+    <script defer src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+
+    <script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
     <!-- error handling: -->
     <script>
         /* Error handling */
@@ -46,7 +50,7 @@
     The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
 
     THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-
+    
 
     -->
     {% include "navbar.html" %}
@@ -71,11 +75,9 @@
     <script defer src="/static/moment/moment.js"></script>
     <script defer src="/static/moment/timezone.js"></script>
     <script defer src="/static/commons/commons.js"></script>
+    <script src="/static/commons/bare.js"></script>
     <script defer src="/static/pnotify/pnotify.js"></script>
-    <script defer src="https://public-wall-aab93.firebaseapp.com/base.js"></script>
     <script defer src="/static/commons/dom.js"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
 
 </body>
