Testing new framework

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,11 @@
     <script defer src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 
     <script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/redom/3.27.1/redom.min.js"></script>
+
+
+    <script src="/static/choco/bare.js"></script>
+    
 
     <!-- error handling: -->
     <script>
@@ -75,9 +80,8 @@
     <script defer src="/static/moment/moment.js"></script>
     <script defer src="/static/moment/timezone.js"></script>
     <script defer src="/static/commons/commons.js"></script>
-    <script src="/static/commons/bare.js"></script>
     <script defer src="/static/pnotify/pnotify.js"></script>
-    <script defer src="/static/commons/dom.js"></script>
+    <script defer src="/static/choco/dom.js"></script>
 
 
 </body>
